Bug 112755 - [BIDI] lines beginning with RTL chars and containing english get are displayd wrongly on screen
Summary: [BIDI] lines beginning with RTL chars and containing english get are displayd...
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: ircview (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: argonel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-16 19:44 UTC by Diego Iastrubni
Modified: 2006-09-01 23:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
demostration of the bug in QTextEdit (1.79 KB, text/plain)
2006-09-01 20:50 UTC, Diego Iastrubni
Details
snapshot of the bug (18.80 KB, image/jpeg)
2006-09-01 20:54 UTC, Diego Iastrubni
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Diego Iastrubni 2005-09-16 19:44:12 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

It seems that the icr-view messes up lines starting with hebrew. 

If the text starts with hebrew, and then contains some latin (or any other LTR script) that language will be revered on screen.

How to reproduce wirte something in hebrew, and send it on the IRC. Here is some text for you to test (copy it to the input line):

ניסיון 123
אני אוכל זכוכית

append some english text after it to see the bug.

I can confirm it on 0.17, but I have seen other people on IRC which sayd display is messed up even worst on SVN trunk.
Comment 1 Diego Iastrubni 2005-09-19 15:57:09 UTC
may i suggest...

You oviously have problems with bidi... I can only assume that more complex scripts (KJC, thai etc) will be even more problematic. Since konversation is getting the de-facto standard irc "klient", may I suggest using html for displaying the text...?

I know this will hurt you, since I know khtml will be painfully slow compared to what you are using now... but it work better, at least for all non-latin1 users.

sorry :)
Comment 2 Torrie Fischer 2005-12-03 00:39:28 UTC
I agree: https://bugs.kde.org/show_bug.cgi?id=116716
Comment 3 Youssef Chahibi 2006-06-28 01:34:23 UTC
Confirmed with Arabic.
This only happens when the English (LTR) text is after Arabic (RTL) text. If the English (LTR) text is before the Arabic (RTL) text is displayed correctly.
Comment 4 Diego Iastrubni 2006-09-01 20:50:48 UTC
Created attachment 17606 [details]
demostration of the bug in QTextEdit

The bug is caused by a bug in QTextEdit, which is triggered by the RLO
character. A workarround can be using RLE instead which has the same effect on
the displayed lines.
Comment 5 Diego Iastrubni 2006-09-01 20:54:59 UTC
Created attachment 17607 [details]
snapshot of the bug

just for the lazy ones... here is a snapshot of that bug.
Comment 6 Diego Iastrubni 2006-09-01 23:02:09 UTC
*** Bug has been marked as fixed ***.