This is a work arround for bug 112755. Now conversation support BIDI completely. The problem was caused by a bug in QTextEdit. See the bug report for a full explain.

I also documented, blah... just gave a link... which explains what are those BIDI constants
used in the source. 

BUG: 112755
CCMAIL: kde-il@yahoogroups.com, Eike Hein <sho@eikehein.com>

svn path=/trunk/extragear/network/konversation/; revision=579857